# UltraCalc

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md  UltraCalc.cpp  UltraCalc.py  functions.cpp  test  test.cpp
docs/: index.html  style.css
includes/: functions.cpp
