cmake_minimum_required(VERSION 3.16.3 FATAL_ERROR)
project("UltraCalc")
add_executable(ultracalc UltraCalc.cpp)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_FLAGS_RELEASE"-O3")
set(CMAKE_CXX_FLAGS_DEBUG"-Wall -Wextra -Wpedantic -ggdb")
option(Comp_Type "Bool to determine wether to compile with debug or release options" OFF)
install(TARGETS ultracalc DESTINATION /usr/bin)

if(NOT EXISTS "${CMAKE_SOURCE_DIR}/.vscode")
  set(CMAKE_BUILD_TYPE "Release")
endif()

if(Comp_Type)
  set(CMAKE_BUILD_TYPE "Debug")
  message(STATUS "Set build type for debug")
elseif(NOT Comp_Type)
  set(CMAKE_BUILD_TYPE "Release")
  message(STATUS "Set build type for release")
endif()
